# Stock-Analysis

./: .gitignore  AGENTS.md  DECISION_OUTPUT_MODEL.md  Makefile  PRODUCT_SPEC.md  READINESS_MODEL.md  README.md  ROADMAP.md  config.yaml  pyproject.toml
.streamlit/: config.toml
data/: analyst_estimates_readiness.csv  dcf_readiness.csv  fundamentals.csv  peers.csv  reviewed_batch_proofs.csv  reviewed_data_proofs.csv
docs/: DASHBOARD_QA.md  DATA_STRATEGY.md  DIFF_HYGIENE_AUDIT.md  LICENSE_DECISION_GUIDE.md  LINKEDIN_PROJECT_BRIEF.md  METHODOLOGY.md  OPERATOR_GUIDE.md  PUBLIC_DEMO_READINESS_PACK.md  PUBLIC_DEMO_WALKTHROUGH.md  PUBLIC_RELEASE_CHECKLIST.md  analysis_capability_audit.md  public_cleanup_audit.md
outputs/: correlation_risk.csv  data_quality_wizard.csv  feature_readiness_summary.csv  final_watchlist.csv  liquidity_risk.csv  market_direction.csv  monthly_picks_equity_curve.csv  monthly_picks_track_record.csv  monthly_research_picks.csv  peer_unlock_worklist.csv  purpose_evaluation_summary.csv  research_action_queue.csv  research_decisions.csv  reviewed_batch_packet.csv  reviewed_batch_packet.md  undervalued_candidates.csv
scripts/: daily.sh  dashboard.sh  diff_hygiene.py  price_refresh_loop.sh  public_wording_check.py  smoke_dashboard.sh  validate_all.sh
src/: __init__.py  action_queue.py  artifact_freshness.py  coverage_expansion_loop.py  dashboard.py  data_onboarding.py  data_sources.py  data_update.py  dcf_readiness.py  decision_proof_queue.py  indicators.py  loader.py  manual_price_import.py  market_direction.py  momentum_engine.py  monthly_picks.py  (+25 more)
(+77 files in other folders)
