[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-research-command-center"
version = "0.1.0"
description = "CSV-first, research-only stock command center with readiness gates, single-stock reports, and transparent valuation blockers."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["stocks", "research", "streamlit", "readiness", "valuation", "csv"]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "streamlit>=1.44",
]

[project.optional-dependencies]
research = [
  "yfinance>=0.2",
]
dev = [
  "pytest>=8.0",
]

[project.urls]
Repository = "https://github.com/YuzeJ21/Stock-Analysis"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["src", "src.providers"]
